--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ NAV
 .customer__logo {
     width: 100%;
     margin-top: 16px;
+    opacity: 0.5;
 }
 .input__wrapper {
     position: relative;
@@ -133,12 +134,26 @@ NAV
     width: 100%;
     height: 100%;
     padding: 20px 12px;
+    border: 1px solid #A0AEC0;
     border-radius: 999px;
     font-size: 20px;
+    transition: all 300ms ease;
+    outline: none;
 }
 .input__field::placeholder{
     color: lightgray;
 }
+.input__field:hover {
+    outline: 1px solid #798491;
+    transition: all 300ms ease;
+}
+.input__field:focus {
+    outline: 3px solid #6415FF;
+    transition: all 600ms ease;
+}
+
+
+
 .input__btn {
     position: absolute;
     width: 30%;
@@ -152,6 +167,7 @@ NAV
     font-weight: 700;
     position: 0;
     margin-right: 0.2rem;
+    transition: all 300ms ease;
 }
 .input__btn:hover{
     background-color: rgb(60 13 153);
