--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ p {
 }
 
 .container {
-    padding: 80px 0;
+    padding: 80px 24px;
 }
 .text-purple {
     color: #6415FF;
@@ -174,16 +174,83 @@ NAV
     cursor: pointer;
 }
 
+/* FEATURES */
+
+#features {
+    height: 100vh;
+}
+
+.features__heading {
+    display: flex;
+    justify-content: center;
+    letter-spacing: 3px;
+    font-size: 20px;
+    margin-bottom: 16px;
+}
+.features__description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 64px;
+}
+.features__title {
+    display: flex;
+    justify-content: center;
+    font-size: 62px;
+    color: #243E63;
+}
+
+.features__subtitle {
+    max-width: 33rem;
+    text-align: center;
+    font-size: 20px;
+    color: #7c8ba1;
+    margin-top: 16px;
+}
+
+.features__cards {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.features__card {
+    width: calc(100% / 3);
+    display: flex;
+    padding: 0 24px;
+    padding-bottom: 64px;
+}
 
 
 
+.features__card-img--wrapper {
+    height: 100%;
+    width: 25%;
+    padding-right: 16px;
+}
 
+.features__card-img {
+    border: 1px solid #d3d5d7;
+    padding: 30%;
+    border-radius: 100%;
+    width: 100%
+}
 
+.features__card-text {
+    width: 75%;
+}
+.features__card-text--title {
+    font-size: 28px;
+    font-weight: 700;
+    color: #243E63;
+    margin-bottom: 16px;
+}
 
-
-
-
-
+.features__card-text--para {
+    font-size: 20px;
+    color: #7c8ba1;
+}
 
 
 
