--- a/styles.css
+++ b/styles.css
@@ -12,19 +12,64 @@ a {
 
 p {
     line-height: 1.5;
+    font-size: 20px;
 }
+
+h1 {
+    font-size: 48px;
+}
+
+h2 {
+    font-size: 62px;
+    color: #243E63;
+}
+section {
+    height: 90vh;
+}
+img {
+    width: 100%;
+}
+
+button {
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    background-color: rgb(100 21 255);
+    padding: 12px 32px;
+    border-radius: 60px;
+    transition: all 300ms ease;
+    border: none;
+}
+button:hover {
+    background-color: rgb(80 17 204);
+}
+
 
 .row {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
-
 .container {
     padding: 80px 24px;
 }
 .text-purple {
     color: #6415FF;
+}
+.text-light-gray {
+    color: #7c8ba1;
+}
+
+.text-heading {
+    display: flex;
+    letter-spacing: 3px;
+    font-size: 20px;
+    margin-bottom: 16px;
+    font-weight: 700;
+}
+
+.text__align--left {
+    text-align: left;
 }
 
 /* 
@@ -70,17 +115,7 @@ nav {
 .nav__link:nth-child(4) {
     margin-right: 64px;
 }
-.nav__link--primary {
-    font-weight: 500;
-    color: #fff;
-    background-color: rgb(100 21 255);
-    padding: 12px 32px;
-    border-radius: 60px;
-    transition: all 300ms ease;
-}
-.nav__link--primary:hover {
-    background-color: rgb(80 17 204);
-}
+
 
 /* INTRO */
 
@@ -98,16 +133,12 @@ nav {
     display: flex;
     flex-direction: column;
 }
-.intro__title {
-    font-size: 48px;
-}
+
 .intro__subtitle {
-    font-size: 18px;
     margin: 32px 0;
     color: #243E63;
 }
 .intro__subtitle--customer {
-    color: #A0AEC0;
     font-weight: 500;
     margin-top: 80px;
 }
@@ -181,16 +212,9 @@ nav {
 /* FEATURES */
 
 #features {
-    height: 100vh;
+    MARGIN-bottom: 80px;
 }
 
-.features__heading {
-    display: flex;
-    justify-content: center;
-    letter-spacing: 3px;
-    font-size: 20px;
-    margin-bottom: 16px;
-}
 .features__description {
     display: flex;
     flex-direction: column;
@@ -201,15 +225,12 @@ nav {
 .features__title {
     display: flex;
     justify-content: center;
-    font-size: 62px;
-    color: #243E63;
 }
 
 .features__subtitle {
     max-width: 33rem;
     text-align: center;
-    font-size: 20px;
-    color: #7c8ba1;
+    font-size: 22px;
     margin-top: 16px;
 }
 
@@ -238,36 +259,89 @@ nav {
     border: 1px solid #d3d5d7;
     padding: 30%;
     border-radius: 100%;
-    width: 100%
 }
 
 .features__card-text {
     width: 75%;
 }
 .features__card-text--title {
-    font-size: 28px;
+    font-size: 32px;
     font-weight: 700;
     color: #243E63;
     margin-bottom: 16px;
 }
 
-.features__card-text--para {
-    font-size: 20px;
-    color: #7c8ba1;
+/* QUALITY */
+
+.quality {
+    display: flex;
+}
+.quality__text {
+    width: 50%;
+    padding-right: 24px;
+}
+.quality__text--para {
+    margin: 16px 0 32px 0;
 }
 
+.quality__img--wrapper{
+    width: 50%;
+    display: flex;
+    align-items: center;
+}    
+.quality__img {
+    border: 1px solid #d3d5d7;
+    border-radius: 4px;
+}
+/* STEPS */
+/* #steps {
+    height: 80vh;
+} */
 
+.steps {
+    display: flex;
+    align-items: center;
+}
+.steps__img--wrapper {
+    width: 50%;
+}
+.steps__text {
+    width: 50%;
+    position: relative;
+    left: 32px;
+}
+.steps__text--para {
+    display: flex;
+}
 
+.steps__para--number {
+    font-size: 36px;
+    font-weight: 700;
+    color: #cbd5e0;
+    position: relative;
+    top: 0;
+}
+.steps__text--para {
+    width: 80%;
+    display: flex;
+    margin-bottom: 16px;
+}
+.steps__para-text {
+    position: relative;
+    left: 16px;
+}
+.steps__para-text--title {
+    color: #243E63;
+    font-size: 24px;
+}
+.steps__para-text--subtitle {
+    font-size: 18px;
+    margin-top: 12px;
+}
 
-
-
-
-
-
-
-
-
-
+.steps__text--title {
+    margin-bottom: 32px;
+}
 
 
 
