--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ button {
     border-radius: 60px;
     transition: all 300ms ease;
     border: none;
+    cursor: no-drop;
 }
 button:hover {
     background-color: rgb(80 17 204);
@@ -78,6 +79,8 @@ NAV
 
 nav {
     height: 80px;
+    display: flex;
+    align-items: center;
 }
 .nav__logo--link {
     display: flex;
@@ -96,7 +99,7 @@ nav {
     color: rgb(100 21 255);
 }
 .nav__container {
-    padding: 32px;
+    padding: 0 32px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -200,7 +203,6 @@ nav {
     border: none;
     font-size: 16px;
     font-weight: 700;
-    position: 0;
     margin-right: 0.2rem;
     transition: all 300ms ease;
 }
@@ -343,11 +345,67 @@ nav {
     margin-bottom: 32px;
 }
 
+/* VALUES */
+
+.values {
+    display: flex;
+}
+
+.values__text {
+    width: 50%;
+}
+.values__subtitle {
+    margin: 32px 0;
+}
+.values__cards {
+    display: flex;
+    margin-bottom: 48px;
+}
+.values__card {
+    width: 50%;
+    padding-right: 32px;
+}
+.values__card--icon-title{
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+}
+
+.values__card--icon{
+    padding: 24px;
+    border-radius: 100%;
+    width: 24px;
+    height: 24px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 16px;
+}
+.values__card:nth-child(1) .values__card--icon-title .values__card--icon{
+    background-color: #9ae6b4;
+    color: #11652e;
+}
+.values__card:nth-child(2) .values__card--icon-title .values__card--icon{
+    background-color: #feb2b2;
+    color: #921d1d;
+}
+
+.values__card--title {
+    font-size: 22px;
+    font-weight: 700;
+    color: #243E63;
+}
+.values__card--para {
+    font-size: 18px;
+    word-spacing: 6px;
+}
 
 
 
-
-
+.values__img--wrapper {
+    width: 50%;
+}
 
 
 
