--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 h2 {
-    font-size: 62px;
+    font-size: 56px;
     color: #243E63;
 }
 section {
@@ -531,10 +531,6 @@ nav {
 
 /* TESTIMONIALS */
 
-#testimonials {
-    height: 110vh;
-}
-
 .testimonials {
     display: flex;
 }
@@ -542,6 +538,8 @@ nav {
 
 .testi__img--wrapper {
     width: 50%;
+    display: flex;
+    align-items: center;
 }
 
 .testi__text {
@@ -604,16 +602,38 @@ nav {
     font-size: 20px;
 }
 
-.review__arrow--left {
-    font-size: 24px;
-    padding: 20px;
+.review__arrow--left,
+.review__arrow--right {
     border: transparent;
-    background-color: rgb(237 242 247);
-    border-radius: 100%;
+    background-color: rgb(215, 229, 243);
     color: #6415FF;
+    padding: 24px;
+    border-radius: 100%;
+    width: 24px;
+    height: 24px;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 16px;
+    transition: all 300ms ease;
+}
+
+.review__arrow--left:hover,
+.review__arrow--right:hover {
+    background-color: rgb(185, 197, 209);
+    transform: scale(0.9);
+    cursor: no-drop;
 }
 
 
+.divider {
+    background-color: rgb(226, 232, 240);
+    width: 2px;
+    height: 64px;
+    display: flex;
+    justify-content: center;
+}
 
 
 
