--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     margin: 0;
     padding: 0;
 }
+body {
+    width: 100% !important;
+    overflow-x: hidden;
+}
 
 a {
     text-decoration: none;
@@ -215,6 +219,16 @@ nav {
 
 #features {
     MARGIN-bottom: 80px;
+    position: relative;
+}
+
+.features__wall-decoration {
+    position: absolute;
+    width: 25%;
+    right: -10%;
+    bottom: -25%;
+    opacity: 0.3;
+    overflow: visible;
 }
 
 .features__description {
@@ -294,10 +308,21 @@ nav {
     width: 50%;
     display: flex;
     align-items: center;
+    position: relative;
 }    
 .quality__img {
     border: 1px solid #d3d5d7;
     border-radius: 4px;
+}
+
+.quality__dots{
+    position: absolute;
+    width: 18%;
+    bottom: 0;
+    right: -9%;
+    background-color: transparent;
+    fill: #6415FF;
+    z-index: -1;
 }
 /* STEPS */
 
@@ -307,6 +332,18 @@ nav {
 }
 .steps__img--wrapper {
     width: 50%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.steps__dots {
+    position: absolute;
+    width: 25%;
+    bottom: -22%;
+    opacity: 0.2;
+    z-index: -1;
+    background-color: transparent;
 }
 .steps__text {
     width: 50%;
@@ -408,6 +445,17 @@ nav {
 
 
 /* PRICING */
+#pricing {
+    position: relative;
+}
+
+.pricing__wall-decoration {
+    position: absolute;
+    width: 30%;
+    left: -15%;
+    bottom: -30%;
+    opacity: 0.3;
+}
 
 .pricing,
 .pricing__text {
@@ -639,6 +687,24 @@ nav {
 
 /* FAQS */
 
+#faqs {
+    position: relative;
+}
+.faqs__wall-decoration:nth-child(1) {
+    position: absolute;
+    width: 20%;
+    right: -10%;
+    top: -10%;
+    color: rgb(79, 209, 197, 0.2);
+}
+.faqs__wall-decoration:nth-child(2) {
+    position: absolute;
+    width: 20%;
+    left: -10%;
+    bottom: -10%;
+    color: rgb(100, 21, 255, 0.2);
+}
+
 .faqs__text {
     display: flex;
     flex-direction: column;
@@ -808,6 +874,11 @@ footer {
 .footer__list--link {
     font-size: 16px;
     color: #f7fafc;
+    padding-bottom: 4px;
+    transition: all 300ms ease;
+}
+.footer__list--link:hover {
+    border-bottom: 2px solid #fff;
 }
 
 .link__wrapper {
@@ -874,6 +945,10 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 300ms ease;
+}
+.footer__social--wrapper:hover {
+    background-color: rgb(200, 198, 198);
 }
 
 footer .blob__container:nth-child(1) {
@@ -885,13 +960,6 @@ footer .blob__container:nth-child(2) {
     right: -100px;
     top: 350px;
 }
-
-
-
-
-
-
-
 
 
 
